--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,6 +85,12 @@ body {
   overflow-x: hidden;
 }
 
+h1,
+h2,
+h3 {
+  text-wrap: balance;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
