--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  position: relative;
 }
 
 h1,
@@ -41,4 +42,9 @@ a {
 
 .linkedin:hover {
   fill: #748ddd;
+}
+
+#about,
+#experience {
+  padding-top: 80px;
 }
